--- a/roles/buster/vars/main.yml
+++ b/roles/buster/vars/main.yml
@@ -1,3 +1,3 @@
 log_files:
-  - "{{ remote_log_dir }}/fix-GHOST_CVE-2015-0235-update-packages-stdout.log"
-  - "{{ remote_log_dir }}/fix-GHOST_CVE-2015-0235-update-packages-stderr.log"
+  - "{{ log_file_prefix }}-update-packages-stdout.log"
+  - "{{ log_file_prefix }}-update-packages-stderr.log"
