--- a/roles/seeker/vars/main.yml
+++ b/roles/seeker/vars/main.yml
@@ -1,3 +1,3 @@
 log_files:
-  - "{{ remote_log_dir }}/fix-GHOST_CVE-2015-0235-check-installed-packages-stdout.log"
-  - "{{ remote_log_dir }}/fix-GHOST_CVE-2015-0235-check-installed-packages-stderr.log"
+  - "{{ log_file_prefix }}-check-installed-packages-stdout.log"
+  - "{{ log_file_prefix }}-check-installed-packages-stderr.log"
